--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -7,12 +7,11 @@
     width: 70%;
 }
 
-.home-container {
+.center {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    padding: 2em;
+    justify-content: center;
 }
 
 @media only screen and (max-width: 800px) {
